@@ -1,114 +1,127 @@
 package be.pxl.services.services;
 
-import be.pxl.services.client.ReviewClient;
-import be.pxl.services.controller.RejectRequest;
 import be.pxl.services.controller.dto.PostDTO;
-import be.pxl.services.controller.request.PostFilterRequest;
+import be.pxl.services.controller.dto.PostResponse;
 import be.pxl.services.controller.request.PostRequest;
 import be.pxl.services.domain.Post;
 import be.pxl.services.domain.PostStatus;
+import be.pxl.services.exception.ResourceNotFoundException;
 import be.pxl.services.repository.PostRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
 public class PostService implements IPostService {
 
     private final PostRepository postRepository;
-    private final ReviewClient reviewClient;
 
-    public Post
+    @Autowired
+    public PostService(PostRepository postRepository) {
+        this.postRepository = postRepository;
+    }
 
-    // Create a new post and return the created post as a PostDTO
+    // Create a new post
     @Override
     public PostDTO createPost(PostRequest postRequest) {
-        Post post = new Post();
-        post.setTitle(postRequest.getTitle());
-        post.setContent(postRequest.getContent());
-        post.setAuthor(postRequest.getAuthor());
-        post.setStatus(PostStatus.DRAFT); // Setting default status
-
-        post.setCreatedDate(LocalDateTime.now());
+        Post post = Post.builder()
+                .title(postRequest.getTitle())
+                .content(postRequest.getContent())
+                .author(postRequest.getAuthor())
+                .createdDate(LocalDateTime.now())
+                .status(postRequest.getStatus() != null ? postRequest.getStatus() : PostStatus.DRAFT)
+                .build();
 
         Post savedPost = postRepository.save(post);
-        return new PostDTO(savedPost); // Return as DTO
+        return mapToPostDTO(savedPost); // Return as DTO
     }
 
-    // Update an existing post and return the updated post as PostDTO
+    // Map a Post to a PostDTO
+    private PostDTO mapToPostDTO(Post post) {
+        return PostDTO.builder()
+                .id(post.getId())
+                .title(post.getTitle())
+                .content(post.getContent())
+                .author(post.getAuthor())
+                .createdDate(post.getCreatedDate())
+                .status(post.getStatus())
+                .build();
+    }
+
+    // Edit an existing post
     @Override
-    public PostDTO updatePost(Long id, PostRequest postRequest) {
-        Optional<Post> existingPost = postRepository.findById(id);
-        if (existingPost.isEmpty()) {
-            throw new RuntimeException("Post not found");
-        }
-        Post post = existingPost.get();
+    public PostDTO editPost(Long id, PostRequest postRequest) {
+        Post post = postRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Post with ID " + id + " not found"));
+
         post.setTitle(postRequest.getTitle());
         post.setContent(postRequest.getContent());
         post.setAuthor(postRequest.getAuthor());
+        post.setStatus(postRequest.getStatus());
 
         Post updatedPost = postRepository.save(post);
-        return new PostDTO(updatedPost); // Return updated post as DTO
+        return mapToPostDTO(updatedPost); // Return updated post as DTO
     }
 
-    // Get all published posts and return them as a list of PostDTO
+    // Retrieve all posts
+    public List<PostResponse> getAllPost() {
+        return postRepository.findAll()
+                .stream()
+                .map(this::mapToPostResponse)
+                .toList();
+    }
+
+    // Map a Post to a PostResponse
+    private PostResponse mapToPostResponse(Post post) {
+        return PostResponse.builder()
+                .id(post.getId())
+                .title(post.getTitle())
+                .content(post.getContent())
+                .author(post.getAuthor())
+                .createdDate(post.getCreatedDate())
+                .status(post.getStatus())
+                .build();
+    }
+
+
+
+    // Retrieve a specific post by ID
+    @Override
+    public PostResponse getPostById(Long id) {
+        return postRepository.findById(id)
+                .map(this::mapToPostResponse)
+                .orElse(null);
+    }
+
+    // Retrieve all published posts
     @Override
     public List<PostDTO> getPublishedPosts() {
         List<Post> publishedPosts = postRepository.findByStatus(PostStatus.PUBLISHED);
         return publishedPosts.stream()
-                .map(PostDTO::new) // Convert each post to PostDTO
-                .collect(Collectors.toList());
+                .map(this::mapToPostDTO) // Convert each post to PostDTO
+                .toList();
     }
 
-    // Publish a post and request approval from ReviewService
-    @Override
-    public PostDTO publishPost(Long id) {
-        Optional<Post> existingPost = postRepository.findById(id);
-        if (existingPost.isEmpty()) {
-            throw new RuntimeException("Post not found");
-        }
-        Post post = existingPost.get();
-        post.setStatus(PostStatus.PUBLISHED);
-
-        // Save locally
-        Post publishedPost = postRepository.save(post);
-
-        return new PostDTO(publishedPost); // Return the published post as DTO
-    }
-
-    // Filter posts
-    public List<Post> filterPosts(PostFilterRequest postFilterRequest) {
+    // US5: Filter posts based on content, author, or date
+    /*@Override
+    public List<PostResponse> filterPosts(PostFilterRequest postFilterRequest) {
+        String content = postFilterRequest.getContent();
         String author = postFilterRequest.getAuthor();
-        String title = postFilterRequest.getTitle();
-        LocalDateTime date = postFilterRequest.getCreationDate();
+        LocalDate creationDate = postFilterRequest.getCreationDate();
 
-        if (date != null) {
-            return postRepository.findByStatusAndDate(PostStatus.PUBLISHED, date);
-        } else if (author != null && !author.isEmpty()) {
-            return postRepository.findByStatusAndAuthorContainingIgnoreCase(PostStatus.PUBLISHED, author);
-        } else if (title != null && !title.isEmpty()) {
-            return postRepository.findByStatusAndTitleContainingIgnoreCase(PostStatus.PUBLISHED, title);
-        }
-        return postRepository.findByStatus(PostStatus.PUBLISHED);
+        // Haal gefilterde posts op vanuit repository
+        List<Post> filteredPosts = postRepository.filterPosts(content, author, creationDate);
 
-    }
+        // Converteer naar PostResponse en retourneer
+        return filteredPosts.stream()
+                .map(this::mapToPostResponse)
+                .toList();
 
-    // USERSTORY 2: Methode om een post als concept op te slaan
-    public PostDTO createDraftPost(PostRequest postRequest) {
-        Post post = new Post();
-        post.setTitle(postRequest.getTitle());
-        post.setContent(postRequest.getContent());
-        post.setAuthor(postRequest.getAuthor());
-        post.setStatus(PostStatus.DRAFT); // Status instellen als DRAFT (concept)
-        post.setCreatedDate(LocalDateTime.now());
+    }*/
 
-        Post savedPost = postRepository.save(post);
-        return new PostDTO(savedPost);
-    }
 
 }
